CHANGES
-------
This file lists changes made to the IGTF Trust Anchor distribution. Please 
refer to the README.txt file for additional information on installing the 
Distribution and to be informed about important information on distribuion 
lay-out.

Changes from 1.72 to 1.73
-------------------------
(28 March 2016)

* Updated key pair for SDG CA G2 (CN)
* Added experimental DCA Root G1 and RCauth.eu Pilot ICA G1 (NL, EU)

Changes from 1.71 to 1.72
-------------------------
(29 February 2016)

* Added roll-over subordinate for the SDG CA G2 (CN)
* Added CERN LCG IOTA CA (CERN)
* Updated PSC MyProxy CA with extended validity (US)

Changes from 1.70 to 1.71
-------------------------
(25 January 2016)

* Added accredited classic KENET ICA and associated Root (KE)
* Removed expiring SDG CA (CN)
* Updated CyGrid Root CA with extended validity period (CY)
* Updated BG-ACAD-CA with extended validity period (BG)

Changes from 1.69 to 1.70
-------------------------
(30 November 2015)

* Updated CRL URL hosted by KIT for ArmeSFO (AM)
* Added NorduGrid 2015 trust anchor (DK,NO,SE,FI,IS)
* Discontinued superseded DigiCertGridCA-1G2-Classic (US)

Changes from 1.68 to 1.69
-------------------------
(26 October 2015)

* Added new INFN "2015" CA as roll-over of the 2006 instance (IT)
* Added new CILogon OSG CA (US)
* Discontinued BalticGrid CA (EE)

Changes from 1.67 to 1.68
-------------------------
(5 October 2015)

* Discontinued CALG CA (LV)
* Added experimental KENET CAs (KE)

Changes from 1.65 to 1.67
-------------------------
(31 August 2015 - release jump, skipping 1.66)

* Discontinued NCSA-mics CA (US)
* Withdrawn G2 root for IPM CA (IR)

Changes from 1.64 to 1.65
-------------------------
(29 June 2015)

* Discontinued NAREGI CA (JP)
* Added addition G2 root for IPM CA (IR)
* Added new subjectdn attribute to the trust anchor and profile meta-data
  files to aid monitoring and authentication-profile based access control